--- a/src/sections/Combos/Combos.scss
+++ b/src/sections/Combos/Combos.scss
@@ -1,4 +1,5 @@
 .combos-container{
+    margin: auto;
     h3{
         margin-top: 32px;
         margin-bottom: 32px;
@@ -11,7 +12,7 @@
     .desktop{
         display: none;
     }
-    @media screen and (min-device-width: 800px) {
+    @media screen and (min-device-width: 1200px) {
       margin:auto;
         .mobile{
             display: none;
